# wordle-tg

./: .gitignore  README.md  bot.py  pyproject.toml
